# nemiver

./: .gitignore  ChangeLog  Makefile.am  NEWS  configure.ac
data/schemas/gconf/: Makefile.am  nemiver-profperspective.schemas
data/schemas/gsettings/: org.nemiver.gschema.xml
help/: Makefile.am
help/C/: TODO  actions.page  breakpoint.page  breakpoints.page  contact.page  debug-core-file.page  debug-program.page  debug-remote-target.page  debug-running-program.page  index.page  interface.page  launch-a-program-to-debug.page  load-session.page  memory.page  register.page  report-bug.page  save-session.page  session-load.page  session-run-debug.page  session-save.page  shortcut-keys.page  step-jump.page  support.page  variables.page  what-is-nemiver.page
po/: POTFILES.in
src/: Makefile.am  main.cc
src/common/: nmv-console.cc  nmv-console.h  nmv-exception.h  nmv-libxml-utils.cc  nmv-loc.h  nmv-parsing-utils.cc  nmv-proc-utils.cc  nmv-proc-utils.h  nmv-safe-ptr.h  nmv-scope-logger.cc  nmv-str-utils.cc  nmv-str-utils.h  nmv-ustring.cc  nmv-ustring.h
src/confmgr/: nmv-conf-keys.h  nmv-gconf-keys-defs.cc  nmv-gsettings-keys-defs.cc
src/dbgengine/: Makefile.am  nmv-cmd-interpreter.cc  nmv-cmd-interpreter.h  nmv-dbg-common.cc  nmv-dbg-console.cc  nmv-dbg-console.h  nmv-debugger-utils.cc  nmv-debugger-utils.h  nmv-gdb-engine.cc  nmv-gdb-engine.h  nmv-gdbmi-parser.cc  nmv-i-debugger.h
src/persp/: Makefile.am  nmv-i-perspective.h
src/persp/dbgperspective/: Makefile.am  nmv-breakpoints-view.cc  nmv-call-function-dialog.cc  nmv-call-stack.cc  nmv-choose-overloads-dialog.cc  nmv-console.cc  nmv-console.h  nmv-dbg-perspective.cc  nmv-dbg-perspective.h  nmv-file-list.cc  nmv-find-text-dialog.cc  nmv-global-vars-inspector-dialog.cc  nmv-local-vars-inspector.cc  nmv-open-file-dialog.cc  nmv-open-file-dialog.h  nmv-preferences-dialog.cc  nmv-proc-list-dialog.cc  nmv-remote-target-dialog.cc  nmv-remote-target-dialog.h  nmv-run-program-dialog.cc  nmv-saved-sessions-dialog.cc  nmv-set-breakpoint-dialog.cc  nmv-set-jump-to-dialog.cc  nmv-var-inspector-dialog.cc  nmv-variables-utils.cc  nmv-vars-treeview.cc  nmv-watchpoint-dialog.cc  plugin-descriptor.xml
src/persp/dbgperspective/menus/: menus.xml
src/persp/dbgperspective/ui/: Makefile.am  findtextdialog.ui  openfiledialog.ui  preferencesdialog.ui  proclistdialog.ui  remotetargetdialog.ui  savedsessionsdialog.ui  setbreakpointdialog.ui  varinspectordialog.ui
src/persp/profperspective/: Makefile.am  nmv-call-list.cc  nmv-call-list.h  nmv-load-report-dialog.cc  nmv-load-report-dialog.h  nmv-prof-perspective.cc  nmv-prof-perspective.h  nmv-prof-preferences-dialog.cc  nmv-prof-preferences-dialog.h  nmv-record-dialog.cc  nmv-record-dialog.h  nmv-record-options.h  plugin-descriptor.xml
src/persp/profperspective/menus/: Makefile.am  menus.xml  toolbar.xml
src/persp/profperspective/ui/: Makefile.am  loadreportdialog.ui  preferencesdialog.ui  recorddialog.ui
src/profengine/: Makefile.am  nmv-call-graph-node.cc  nmv-call-graph-node.h  nmv-confmgr-record-options.cc  nmv-confmgr-record-options.h  nmv-i-profiler.h  nmv-perf-engine.cc  nmv-perf-engine.h  nmv-perf-server.cc  nmv-record-options.h  org.gnome.nemiver.profiler.conf.in  org.gnome.nemiver.profiler.policy.in  org.gnome.nemiver.profiler.service.in
src/uicommon/: Makefile.am  nmv-dialog.cc  nmv-locate-file-dialog.cc  nmv-source-editor.cc  nmv-source-editor.h  nmv-terminal.cc  nmv-terminal.h  nmv-ui-utils.h
src/workbench/: nmv-i-workbench.h  nmv-workbench.cc
tests/: Makefile.am  test-breakpoint.cc  test-cmd-interpreter.cc  test-core.cc  test-cpp-lexer.cc  test-cpp-parser.cc  test-dbg-states.cc  test-deref.cc  test-gdbmi.cc  test-global-variables.cc  test-libtool-wrapper-detection.cc  test-local-vars-list.cc  test-overloads.cc  test-unicode.cc  test-var-list.cc  test-var-path-expr.cc  test-var-walker.cc  test-watchpoint.cc
ui/: Makefile.am  locatefiledialog.ui  workbench.ui
